Fixed a bunch of tests so test are starting to work on not there are many of them.
Signed-off-by: jasperpotts <jasperpotts@users.noreply.github.com>